--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,64 @@
-name: CI & Coverage
+name: CI + Coverage Pages
+
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    outputs:
+      coverage-path: coverage
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 22
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Type check
+      - name: Lint
+        run: npm run lint
+
+      - name: TypeScript build
         run: npm run build
 
-      - name: Run tests with coverage
-        run: npm run test -- --coverage
+      - name: Run Jest tests with coverage
+        run: npm test -- --coverage
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/lcov.info
-          flags: unittests
-          name: api-fetcher-cache
-          fail_ci_if_error: true
-
-      - name: Generate Coverage Badge
-        if: success()
-        run: |
-          npx coverage-badges-cli -o coverage/badge.svg
-
-      - name: Upload Coverage Badge Artifact
+      - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-badge
-          path: coverage/badge.svg
+          name: coverage-html
+          path: coverage/lcov-report
+
+  publish-coverage:
+    runs-on: ubuntu-latest
+    needs: build-test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download coverage artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-html
+          path: coverage/
+
+      - name: Deploy coverage to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./coverage/lcov-report
