--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.6.1",
