--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.6.1",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
