--- a/.github/workflows/dependerbot-auto-approve.yml
+++ b/.github/workflows/dependerbot-auto-approve.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Approve a PR
-        run: gh pr review --approve "$PR_URL"
+        run: gh pr review --approve "$PR_URL" --github-token "${{ secrets.GITHUB_TOKEN }}"
+
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
