--- a/.github/workflows/dependerbot-auto-approve.yml
+++ b/.github/workflows/dependerbot-auto-approve.yml
@@ -16,7 +16,10 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Approve a PR
-        run: gh pr review --approve "$PR_URL" --github-token "${{ secrets.GITHUB_TOKEN }}"
-
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
+          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        run: |
+          echo "$GH_TOKEN" | gh auth login --with-token
+          gh pr review --approve "$PR_URL"
+
